plugins {
    id 'java'
    id 'java-library'
    id("fr.stardustenterprises.rust.wrapper") version "3.2.5" apply false
    id("fr.stardustenterprises.rust.importer") version "3.2.5"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation("org.apache.lucene:lucene-core:10.2.1")
    testImplementation("org.apache.lucene:lucene-test-framework:10.2.1")
    rust(project(":src:main:rust"))
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}